Hide gallery arrows when there is only one image

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <div id="gallery_footer">
     <div id="arrow_container">
 
-      <button style="cursor: pointer; border:none; background-color: #303030; color: white;" class="mdc-icon-button mdc-icon-button--touch material-icons" onclick="moveImageLeft()">
+      <button id="arrow_left"style="cursor: pointer; border:none; background-color: #303030; color: white;" class="mdc-icon-button mdc-icon-button--touch material-icons" onclick="moveImageLeft()">
         <div class="mdc-icon-button__ripple"></div>
         arrow_back
         <div class="mdc-icon-button__touch"></div>
@@ -55,7 +55,7 @@
       <div id="gallery_image_title"></div>
       <div id="gallery_image_progress"></div>
 
-      <button style="cursor: pointer; border:none; float:right; background-color: #303030; color: white;" class="mdc-icon-button mdc-icon-button--touch material-icons" onclick="moveImageRight()">
+      <button id="arrow_right" style="cursor: pointer; border:none; float:right; background-color: #303030; color: white;" class="mdc-icon-button mdc-icon-button--touch material-icons" onclick="moveImageRight()">
         <div class="mdc-icon-button__ripple"></div>
         arrow_forward
         <div class="mdc-icon-button__touch"></div>
