Make titles sexier

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 <div id="header">
   <h1 id="title">"COLAB II"</h1>
-  <h2 id="subtitle">[ AN EXPLORATION OF SPACE AND HABITAT THROUGH WINDOWS BY TOM GIBSON AND ESME LAWTON ]</h2>
+  <h2 id="subtitle">[ AN EXPLORATION OF SPACE AND HABITAT THROUGH WINDOWS  &nbsp; | &nbsp;  BY TOM GIBSON AND ESME LAWTON ]</h2>
 </div>
 
 <img id="gallery_back_button" src="img/close.png" onclick="closeGalleryView()"/>
