--- a/index.html
+++ b/index.html
@@ -60,13 +60,20 @@
   </div>
 </div>
 
+<div id="loadingScreen">
+  <div id="loadingText">
+    <h1 id="loadingTitle">"COLAB II"</h1>
+    <h2 id="loadingSubtitle">[ AN EXPLORATION OF SPACE AND HABITAT THROUGH WINDOWS  &nbsp; | &nbsp;  BY TOM GIBSON AND ESME LAWTON ]</h2>
+    <img id ="loadingIcon" src="img/loading.png"/>
+  </div>
+  
+</div>
+
 
 
 <script>
   window.onload = () => startup();
 </script>
-
-
 
 </body>
 </html> 
